[package]
name    = "wasm-phonebook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
serde-wasm-bindgen   = "0.6"

[profile.release]
opt-level = "z"
lto       = true
